# NTT_implementation

./: Cargo.toml  README.md
benches/: field_bench.rs  ntt.rs  vectorized.rs
src/: dft.rs  lib.rs
src/dft/: barrett_field_32bit.rs  barrett_scalar_ntt.rs  barrett_vector_ntt.rs  field.rs  goldilocks_field.rs  goldilocks_ntt.rs  mont_field.rs  mont_ntt.rs  ntt.rs  shoup_field.rs  shoup_ntt.rs  util.rs
