[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"
concrete-ntt = "0.2.0"
rand = "0.8"
rayon = "1.10"
plonky2_field = "1.0.0"
plonky2_util = "1.0.0"

[[bench]]
name = "ntt"
path = "benches/ntt.rs"
harness = false

[[bench]]
name = "field_bench"
path = "benches/field_bench.rs"

[[bench]]
name = "vectorized"
path = "benches/vectorized.rs"
harness = false